--- a/article/templates/layout.html
+++ b/article/templates/layout.html
@@ -70,12 +70,12 @@
         <div class="col-md-4">
           <div class="content-section">
             <h3>Our Sidebar</h3>
-            <p class='text-muted'>You can put any information here you'd like.
+            <p class='text-muted'>You profile here
               <ul class="list-group">
-                <li class="list-group-item list-group-item-light">Latest Posts</li>
-                <li class="list-group-item list-group-item-light">Announcements</li>
-                <li class="list-group-item list-group-item-light">Calendars</li>
-                <li class="list-group-item list-group-item-light">etc</li>
+                <li class="list-group-item list-group-item-light">Profile</li>
+                <li class="list-group-item list-group-item-light">Post</li>
+                <li class="list-group-item list-group-item-light">Comments</li>
+                <li class="list-group-item list-group-item-light">Followers</li>
               </ul>
             </p>
           </div>
